--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "jquery": "^3.7.1",
+    "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-owl-carousel": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
